# kiwi

./: .env  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  Dockerfile  LICENSE-BSL  LICENSE-MIT  README.md  compose.cloud.yml  compose.override.yml  compose.yml  environment.yml  manage.sh  pyproject.toml
app/: __init__.py  cloud_session.py  main.py  tiers.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  models.py  session.py  store.py
app/models/: __init__.py
app/services/: __init__.py  barcode_scanner.py  expiration_predictor.py  heimdall_orch.py  inventory_service.py  openfoodfacts.py  receipt_service.py  receipt_service_inmemory_backup.py
app/staples/: seitan.yaml  tempeh.yaml  tofu_firm.yaml
app/static/: index.html  upload.html.backup
app/styles/: east_asian.yaml  eastern_european.yaml  italian.yaml  latin.yaml  mediterranean.yaml
app/tasks/: runner.py  scheduler.py
app/utils/: __init__.py  progress.py  units.py
docker/web/: Dockerfile  nginx.cloud.conf  nginx.conf
frontend/: .env  THEMING_SYSTEM.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.vue  style.css  theme.css
scripts/: backfill_keywords.py  backfill_texture_profiles.py
scripts/pipeline/: build_flavorgraph_index.py  build_ingredient_index.py  build_recipe_index.py  derive_substitutions.py  download_datasets.py  estimate_recipe_nutrition.py  infer_recipe_tags.py
tests/: test_household.py  test_meal_plan_tiers.py  test_tiers.py
tests/api/: test_community_endpoints.py  test_feedback.py  test_meal_plans.py  (+5 more)
(+144 files in other folders)
