[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwi"
version = "0.1.0"
description = "Pantry tracking + leftover recipe suggestions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    # Image processing + OCR
    "opencv-python>=4.8",
    "numpy>=1.25",
    "pyzbar>=0.1.9",
    # HTTP client
    "httpx>=0.27",
    # CircuitForge shared scaffold
    "circuitforge-core",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
